argo-workflows/argo-workflows-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argo-workflows-router
  namespace: argo-workflows
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argo-workflows.attias.io`)
      kind: Rule
      services:
        - name: argo-workflows-server
          port: 2746
  tls:
    certResolver: le
